gitops/platform/base/envoy-gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: admancorp-envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
