gitops/platform/base/envoy-gateway/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: public-gateway
      namespace: platform-ingress
      sectionName: https-argocd
  hostnames:
    - argocd-placeholder.admancorp.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
